hetzner/k8s/paperless_ngx/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: apps-paperless-ngx
  labels:
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/managed-by: argocd
